compile.c: disallow private readers

* compile.c (iseq_compile_each): revert r46873 and r46875, not to
  allow to execute private readers by pretending op assign.
  [ruby-core:68984] [Bug #11096]